--- a/src/app/managerPortal/centre-applications/centre-applications.component.css
+++ b/src/app/managerPortal/centre-applications/centre-applications.component.css
@@ -3,6 +3,8 @@ h1{
     margin-top: 30px;
 }
 
-table.mat-table {
+table.mat-table{
     background-color: #0d5301;
+    width: 678px;
+    color: white;
 }
