--- a/src/app/managerPortal/application-view/application-view.component.html
+++ b/src/app/managerPortal/application-view/application-view.component.html
@@ -134,9 +134,9 @@
             </table>
 
             <br>
-            <button mat-raised-button color="primary" (click) = "onSubmit(test)">Accept</button>&nbsp;&nbsp;&nbsp;&nbsp;
-            <button  mat-raised-button color="warn">Reject</button>
-          
+            <button mat-raised-button color="primary" (click) = "onSubmit(test)">Accept</button>
+            <button  mat-raised-button color="warn" style="padding-right: 15px;">Reject</button>
+            <button  mat-raised-button color="warn" (click) = "trick(test)"> Go back</button>
           </form>
             
      
