--- a/src/app/managerPortal/manager-view-progress/manager-view-progress.component.css
+++ b/src/app/managerPortal/manager-view-progress/manager-view-progress.component.css
@@ -1,9 +1,23 @@
 .container{
-    width: 800px;
-    height: 400px;
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    height: 75%;
 }
 
-nav{
-    display: flex;
-    justify-content: center;
+.mat-form-field{
+    width: 300px;
+}
+
+img {
+    border-radius: 25px;
+}
+
+h1{
+    text-align: center;
+    margin-top: 30px;
+}
+
+mat-card{
+    background-color: #0d5301;
 }
