--- a/src/app/RegionalPortal/financial-approval/financial-approval.component.html
+++ b/src/app/RegionalPortal/financial-approval/financial-approval.component.html
@@ -1,35 +1,44 @@
 <router-outlet></router-outlet>
 <h1>Financial Requests</h1>
-<div class="container">
+  <table mat-table [dataSource]="results" class="mat-elevation-z8" style="width: 100% !important;">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> Centre Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.centreName}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Requested Funds </th>
+      <td mat-cell *matCellDef="let element"> R {{element.amount}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Centre Available Funds </th>
+      <td mat-cell *matCellDef="let element">R {{element.fundsAvailable}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element"> {{element.status.toUpperCase()}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let element"> 
+         <button (click)="approve(element.reqID)" *ngIf="element.status == 'pending'">Approve</button>
+         <button (click)="decline(element.reqID)" *ngIf="element.status == 'pending'">Decline</button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 
 
-<mat-card class="example-card">
-    <mat-card-content>
-        <div>
-            <img src="assets/images/logo.png">
-        </div>
-        <div class="form">
-            <form [formGroup]="angForm" (ngSubmit)="postdata(angForm)" autocomplete="off" >
-                <label>Centre Name:</label> &nbsp;&nbsp;&nbsp;&nbsp;
-                <select class="centre" name=notifs> Please select data below
-                    <option *ngFor="let notifs of notifications" value="notifs.Message">
-                  {{ notifs.Message }}
-                </option>
-                
-                 </select>
-                 <br>
-                 <label>Description</label> &nbsp;&nbsp;&nbsp;&nbsp;
-                 <input class="desc" type="text">
-                  <br>
-                 <label>Syllabus Upload:</label> &nbsp;&nbsp;&nbsp;&nbsp;
-                 <input class="upload" type="file">
-                   <br>
-                 <input type="submit" value="Send">
-                    
-            </form>
-        </div>
-      
-    </mat-card-content>
-  
-  </mat-card>
-  </div>
