--- a/src/app/parentPortal/mychildren/mychildren.component.html
+++ b/src/app/parentPortal/mychildren/mychildren.component.html
@@ -28,7 +28,7 @@
                 </mat-card> 
             </div>
             <div class="img">
-                <img src="assets/images/tisha-staff7.png">
+                <img src="assets/images/logoback.PNG">
             </div> 
         </mat-card-content>
         <mat-card-actions>
