--- a/src/app/parentPortal/mychildren/mychildren.component.css
+++ b/src/app/parentPortal/mychildren/mychildren.component.css
@@ -12,11 +12,11 @@
   }
 
   .abc{
-      margin-left: 85px;
+      margin-left: 65px;
   }
 
   .play{
-    margin-left: 74px;
+    margin-left: 75px;
 }
 
 
@@ -29,13 +29,29 @@
     margin-left: 150px;
 }
 
+img{
+    width: 350px;
+    height: 300px;
+    position: relative;
+    top: 45px;
+
+}
+
 mat-card-actions{
     display: flex;
     gap: 200px;
 }
 
 .listen{
-    margin-left: 2px;
+    margin-left: 22px;
+}
+
+.art{
+    margin-left: 103px;
+}
+
+.sleep{
+    margin-left: 65px;
 }
 
 button{
