--- a/src/app/parentPortal/mychildren/mychildren.component.html
+++ b/src/app/parentPortal/mychildren/mychildren.component.html
@@ -21,8 +21,8 @@
                         <label>Counting</label> <label class="abc">{{item['counting']}}</label><br>
                         <label>Playing</label> <label class="play">{{item['playing']}}</label><br>
                         <label>Comprehension</label> <label class="listen">{{item['comprehension']}}</label><br>
-                        <label>Sleeping</label> <label>{{item['sleeping']}}</label><br>
-                        <label>Art</label> <label>{{item['art']}}</label><br>
+                        <label>Sleeping</label> <label class="sleep" >{{item['sleeping']}}</label><br>
+                        <label>Art</label> <label class="art" >{{item['art']}}</label><br>
                             </p>
                     </mat-card-content>
                 </mat-card> 
