--- a/src/app/parentPortal/progress/progress.component.html
+++ b/src/app/parentPortal/progress/progress.component.html
@@ -1,1 +1,52 @@
-<p>progress works!</p>
+
+  <router-outlet></router-outlet>
+  <div class="cont">
+
+    <mat-card class="example-card" *ngFor = "let item of childprogress">
+        <mat-card-header>
+        
+          <mat-card-title>{{item['childName']}} {{item['childSurname']}}</mat-card-title>
+          <mat-card-subtitle>{{item['className']}} {{item['term']}} </mat-card-subtitle>
+         
+        
+        </mat-card-header>
+        
+        <mat-card-content>
+            <div>
+                <mat-card class="example-card">
+                
+                    <mat-card-content>
+                        <p>
+                        <label>Reading</label><label class="read">{{item['reading']}}</label><br>
+                        <label>Counting</label> <label class="abc">{{item['counting']}}</label><br>
+                        <label>Playing</label> <label class="play">{{item['playing']}}</label><br>
+                        <label>Comprehension</label> <label class="listen">{{item['comprehension']}}</label><br>
+                        <label>Sleeping</label> <label class="sleep" >{{item['sleeping']}}</label><br>
+                        <label>Art</label> <label class="art" >{{item['art']}}</label><br>
+                            </p>
+                    </mat-card-content>
+                </mat-card> 
+            </div>
+            <div class="img">
+                <img src="assets/images/logoback.PNG">
+            </div> 
+        </mat-card-content>
+        <mat-card-actions>
+        <div>
+         <p class="comment">
+             Comments<br>
+             <textarea>{{item['comment']}}</textarea>
+         </p>
+        </div>
+        <div>
+        <p class="sign">
+            Signed By: A.Tyesi
+        </p>
+        </div>
+    
+        </mat-card-actions>
+      </mat-card>
+  
+      
+    </div>
+    
