--- a/src/app/managerPortal/application-view/application-view.component.html
+++ b/src/app/managerPortal/application-view/application-view.component.html
@@ -135,7 +135,7 @@
 
             <br>
             <button mat-raised-button color="primary" (click) = "onSubmit(test)">Accept</button>
-            <button  mat-raised-button color="warn" style="padding-right: 15px;">Reject</button>
+            <button  mat-raised-button color="warn" style="padding-right: 15px;" (click) = "reject(test)">Reject</button>
             <button  mat-raised-button color="warn" (click) = "trick(test)"> Go back</button>
           </form>
             
