--- a/src/app/parentPortal/parent-home/parent-home.component.css
+++ b/src/app/parentPortal/parent-home/parent-home.component.css
@@ -22,3 +22,39 @@ mat-card {
     width:520px;
     height: 75vh;
 }
+
+.num2{
+    font-family: 'Bangers',;
+    font-weight: 900;
+    font-size: 24px;
+    text-align: center;
+    position: relative;
+    top: 54px;
+}
+
+.num3{
+    font-family: 'Bangers', cursive;
+    font-weight: 900;
+    font-size: 54px;
+    text-align: center;
+    position: relative;
+    top: 45px;
+}
+
+.num{
+    font-family: 'Bangers', cursive;
+    font-weight: 900;
+    font-size: 54px;
+    text-align: center;
+    position: relative;
+    top: 54px;
+}
+
+.txt{
+    font-family: 'Bangers',;
+    font-weight: 900;
+    font-size: 24px;
+    
+    position: relative;
+   
+}
