final commit for publish

--- a/src/app/RegionalPortal/regional-manager-home/regional-manager-home.component.css
+++ b/src/app/RegionalPortal/regional-manager-home/regional-manager-home.component.css
@@ -16,6 +16,14 @@ mat-card {
     gap: 15px;
     flex-wrap: wrap;
     border: none;
+    position: relative;
+    right: 250px;
+}
+
+.card3{
+  position: relative;
+  bottom: 446px;
+  left: 320px;
 }
 .example-cards{
     width:520px;
