--- a/src/app/RegionalPortal/regional-manager-portal/regional-manager-portal.component.html
+++ b/src/app/RegionalPortal/regional-manager-portal/regional-manager-portal.component.html
@@ -21,7 +21,7 @@
     <mat-sidenav-container>
       <mat-sidenav #sidenav= "matSidenav">
     
-        <img class="avatar mat-elevation-z8" src="assets/images/elne-staff5.png">
+        <img class="avatar mat-elevation-z8" src="assets/images/logoback.PNG">
         <h4 class="name">{{name}}</h4>
         <p class="designation">{{type}}</p>
     
@@ -47,11 +47,7 @@
         </button>
         <br>
         
-        <button [routerLink]="['/Regional-Portal/MountainChat']" mat-button class="menu-button">
-          <mat-icon>chat_bubble_outline</mat-icon>
-          <span>Mountain Chat</span>
-        </button>
-        <br>
+      
         <button [routerLink]="['/Regional-Portal/MyProfile']" mat-button class="menu-button">
           <mat-icon>person</mat-icon>
           <span>My Profile</span>
