--- a/src/app/RegionalPortal/regional-manager-profile/regional-manager-profile.component.css
+++ b/src/app/RegionalPortal/regional-manager-profile/regional-manager-profile.component.css
@@ -1,3 +1,4 @@
+
 .container{
     display: flex;
     align-items: center;
@@ -16,4 +17,8 @@ img {
 h1{
     text-align: center;
     margin-top: 30px;
+}
+
+mat-card{
+    background-color: #8b0903;
 }
