--- a/src/app/RegionalPortal/regional-manager-profile/regional-manager-profile.component.html
+++ b/src/app/RegionalPortal/regional-manager-profile/regional-manager-profile.component.html
@@ -1,47 +1,50 @@
 <router-outlet></router-outlet>
 <h1>My Profile</h1>
 <div class="container">
-    <img src= "assets/images/tasha-staff9.png">
-    <form class="example-form">
+   
+    <mat-card>
+
+    <form [formGroup]="FormGroup" class="example-form" *ngFor = "let item of coord">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>First Name</mat-label>
-          <input matInput placeholder="Ex. John">
+          <input matInput  formControlName="name"  placeholder="{{item.firstName}}">
         </mat-form-field> &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Ex. Smith">
+            <input matInput placeholder="{{item.surname}}" formControlName="surname">
         </mat-form-field><br>
     
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Cell No</mat-label>
-            <input matInput placeholder="Ex. 0617872707">
+            <input matInput placeholder="{{item.cellNo}}" formControlName="email">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Work No</mat-label>
-            <input matInput placeholder="Ex. 0414054524">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="{{item.emailAddress}}" formControlName="cellno">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>1<sup>st</sup> Line of Address</mat-label>
-            <input matInput placeholder="51 Winderemere Road Humewood">
+            <input matInput placeholder="{{item.line1Address}}" formControlName="city">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>2<sup>nd</sup> Line of Address</mat-label>
-            <input matInput placeholder="Port Elizabeth">
+            <input matInput placeholder="{{item.line2Address}}" formControlName="line1">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>3<sup>rd</sup> Line of Address</mat-label>
-            <input matInput placeholder="Ex. Eastern Cape">
+            <input matInput placeholder="{{item.City}}" formControlName="line2">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Postal Code</mat-label>
-            <input matInput placeholder="Ex. 6001">
+            <input matInput placeholder="{{item.zip}}" formControlName="zip">
         </mat-form-field> <br>
-        <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
-        <button mat-raised-button color="warn">Reset</button>
+        <button mat-raised-button color="primary" (click)="postdata(FormGroup)">Edit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+
       
       </form>
+      </mat-card>
       
     </div>
